Fix ifndef in Assertions.h https://bugs.webkit.org/show_bug.cgi?id=174104

Reviewed by Saam Barati.

The ifndef should have been checking for
CRASH_WITH_SECURITY_IMPLICATION_AND_INFO since that is what the
ifndef defines.

* wtf/Assertions.h:


Canonical link: https://commits.webkit.org/190953@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@219101 268f45cc-cd09-0410-ab3c-d52691b4dbfc